# ParallelRNG

./: .gitignore  .travis.yml  CMakeLists.txt  ParallelRngManager_8cpp.html  ParallelRngManager_8cpp__incl.map  ParallelRngManager_8cpp__incl.md5  ParallelRngManager_8cpp_source.html  ParallelRngManager_8h.html  ParallelRngManager_8h__dep__incl.map  ParallelRngManager_8h__dep__incl.md5  ParallelRngManager_8h__incl.map  ParallelRngManager_8h__incl.md5  ParallelRngManager_8h_source.html  README.md  README_8md.html  README_8md_source.html  annotated.html  build.debug.sh  build.gcc4_9.debug.sh  build.sh  classes.html  classparallel__rng_1_1ParallelRngManager-members.html  classparallel__rng_1_1ParallelRngManager.html  classparallel__rng_1_1ParallelRngManagerError-members.html  classparallel__rng_1_1ParallelRngManagerError.html  classparallel__rng_1_1ParallelRngManagerError__coll__graph.map  classparallel__rng_1_1ParallelRngManagerError__coll__graph.md5  classparallel__rng_1_1ParallelRngManagerError__inherit__graph.map  classparallel__rng_1_1ParallelRngManagerError__inherit__graph.md5  classparallel__rng_1_1ParallelRngManager_a00c61e3387693dce69cc8227a5114494_icgraph.map  classparallel__rng_1_1ParallelRngManager_a00c61e3387693dce69cc8227a5114494_icgraph.md5  classparallel__rng_1_1ParallelRngManager_a27fce29ff0415e0652d1cad60c3caea6_cgraph.map  classparallel__rng_1_1ParallelRngManager_a27fce29ff0415e0652d1cad60c3caea6_cgraph.md5  classparallel__rng_1_1ParallelRngManager_a62a8227d353a02dbaa52836520cde365_cgraph.map  classparallel__rng_1_1ParallelRngManager_a62a8227d353a02dbaa52836520cde365_cgraph.md5  classparallel__rng_1_1ParallelRngManager_a8c26d916f3641fd22893fb6725c9b975_cgraph.md5  classparallel__rng_1_1ParallelRngManager_ab94314c0bea77cfb072c4ae272805262_cgraph.map  classparallel__rng_1_1ParallelRngManager_ab94314c0bea77cfb072c4ae272805262_cgraph.md5  classparallel__rng_1_1ParallelRngManager_add4bd5a95d4923135406e4b9eb72737d_cgraph.map  classparallel__rng_1_1ParallelRngManager_ae2d6bfb8558004b9a89c5de84d9beab6_icgraph.map  (+30 more)
cmake/Modules/: .ExportPackageWizzard.cmake.kate-swp  .gitrepo  AddExternalAutotoolsDependency.cmake  AddExternalDependency.cmake  ExportPackageWizzard.cmake  FindTRNG.cmake  PackageConfig.cmake
cmake/Templates/: PackageConfig.cmake.in  ParallelRngManagerConfig.cmake.in
cmake/UncommonCMakeModules/: .gitrepo
cmake/UncommonCmakeModules/: .gitrepo
doc/: CMakeLists.txt
include/ParallelRngManager/: AArray.h  AnyRNG.h  AnyRng.h  ParallelRngManager.h  cache_alignment.h
include/ParallelRngManager/AlignedArray/: .gitrepo  AArray.h  README.md
include/ParallelRngManager/AnyRng/: .gitrepo  AnyRng.h
pdf/: ParallelRngManager_8cpp.tex  ParallelRngManager_8cpp__incl.md5  ParallelRngManager_8h.tex  ParallelRngManager_8h__dep__incl.md5  ParallelRngManager_8h__incl.md5  annotated.tex  classparallel__rng_1_1ParallelRngManager.tex  classparallel__rng_1_1ParallelRngManagerError.tex  classparallel__rng_1_1ParallelRngManagerError__coll__graph.md5  classparallel__rng_1_1ParallelRngManagerError__inherit__graph.md5  classparallel__rng_1_1ParallelRngManager_a00c61e3387693dce69cc8227a5114494_icgraph.md5  classparallel__rng_1_1ParallelRngManager_a27fce29ff0415e0652d1cad60c3caea6_cgraph.md5  classparallel__rng_1_1ParallelRngManager_a62a8227d353a02dbaa52836520cde365_cgraph.md5  classparallel__rng_1_1ParallelRngManager_a8c26d916f3641fd22893fb6725c9b975_cgraph.md5  classparallel__rng_1_1ParallelRngManager_ab94314c0bea77cfb072c4ae272805262_cgraph.md5  classparallel__rng_1_1ParallelRngManager_ae2d6bfb8558004b9a89c5de84d9beab6_icgraph.md5  dir_025dd559c7f07dc643634f3e815297de.tex  dir_025dd559c7f07dc643634f3e815297de_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  index.tex  namespaceparallel__rng.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
scripts/: build.win64.debug.sh  dist-build.sh  doc-build.sh  pdf-doc-build.sh  travis-build-test.sh
search/: all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  search.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  typedefs_7.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  ParallelRngManager.cpp  ParallelRngManager.h  cache_alignment.cpp
test/: CMakeLists.txt  test_AArray.cpp  test_parallel_rng.cpp
